2008-04-25  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* ListView.cs: When doing a key search use FindItemWithText method
	instead of doing the search by ourselves, this way we avoid
	duplicating the code and also we handle the special case for virtual
	mode. To achieve that make our private overload of FindItemWithText
	internal and also have a 'roundtrip' parameter.

2008-04-25  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* ListView.cs: When doing the layout don't request the
	ListViewItem instance if we are in virtual mode (since we can't request it
	until the item is actully drawn).

2008-04-25  George Giolfan  <georgegiolfan@yahoo.com>

	* ThemeVisualStyles.cs: Added support for ProgressBar (based on the patch 
	from Ernesto).

2008-04-25  George Giolfan  <georgegiolfan@yahoo.com>

	* ThemeVisualStyles.cs: Added support for ControlPaint.DrawCheckBox (based on 
	the patch from Ernesto).

2008-04-25  George Giolfan  <georgegiolfan@yahoo.com>

	* ThemeEngine.cs: Added code to select ThemeVisualStyles.
	* ThemeVisualStyles.cs: Added.

2008-04-25  George Giolfan  <georgegiolfan@yahoo.com>

	* IDeviceContext.cs: Added a missing using.

2008-04-25  George Giolfan  <georgegiolfan@yahoo.com>

	* ButtonBase.cs: Made IsDefault protected internal.
	* ButtonRenderer.cs: Made GetPushButtonRenderer(PushButtonState) internal.

2008-04-25  George Giolfan  <georgegiolfan@yahoo.com>

	* Application.cs: Included VisualStyles-related members in the 1.1 profile.
	* ButtonRenderer.cs, CheckBoxRenderer.cs, Padding.cs, PaddingConverter.cs,
	RadioButtonRenderer.cs: Included in the 1.1 profile.
	* IDeviceContext.cs: Added.
	* TextRenderer.cs: Included a member in the 1.1 profile.

2008-04-25  George Giolfan  <georgegiolfan@yahoo.com>

	* ThemeWin32Classic.cs: Added ShouldPaintFocusRectangle(ButtonBase).

2008-04-24  Jonathan Pobst  <monkey@jpobst.com>

	* ErrorProvider.cs: Make the error icons come after the control