@@ -1,3 +1,8 @@
+2008-04-26  George Giolfan  <georgegiolfan@yahoo.com>
+
+	* ThemeVisualStyles.cs: Added support for ControlPaint.DrawCaptionButton and
+	partial support for managed windows (based on the patch from Ernesto).
+
 2008-04-25  Carlos Alberto Cortez <calberto.cortez@gmail.com>
 
 	* ListView.cs: When doing a key search use FindItemWithText method
